--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ guessing_game/target/
 hello_wold/target/
 ruslings/target/
 variables/target/
+ownership/target/
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
