--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ variables/target/
 ownership/target/
 structs/target/
 rectangles/target/
+enums/target/
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
