--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ ownership/target/
 structs/target/
 rectangles/target/
 enums/target/
+crates_modules/target/
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
