:sparkles: start with collections

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ ownership/target/
 structs/target/
 rectangles/target/
 enums/target/
-crates_modules/target/
+restaurant/target/
+collections/target/
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
