--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ rectangles/target/
 structs/target/
 variables/target/
 restaurant/target/
+error_handling/target/
 
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
