--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ structs/target/
 variables/target/
 restaurant/target/
 error_handling/target/
+traits_lifetimes/target/
 
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
